<resources>
    <string name="app_name">LegalApp</string>
    <string name="logoName">司法管理系统</string>
    <string name="activityFacialRecognition">面部识别</string>
    <string name="activityCheck">远程打卡</string>
    <string name="activityNotification">通知</string>
    <string name="activityMy">我的</string>
    <string name="phoneHint">请输入手机号</string>
    <string name="VerificationHint">发送验证码</string>
    <string name="phoneButton">发送验证码</string>
    <string name="loginButton">登录</string>
    <string name="VerificationButton">45秒</string>
    <string name="titleName">我的</string>
    <string name="myPhone">手机号 ：17607110024</string>
    <string name="myDeviceNumber">设备号 ：ASDFGJKL</string>
    <string name="myName">姓           名 ：张某某</string>
    <string name="myId">身份证 ：123456789123456789</string>
    <string name="myBlueTooth">蓝牙配码 ：QWERTYUIOP</string>
    <string name="successful">操作成功</string>
    <string name="failed">操作失败</string>
    <string name="check_result_ok">识别成功！</string>
    <string name="check_ok_guide">你已成功认证！</string>
    <string name="check_fail_result">识别失败！</string>
    <string name="check_fail_guide">请重新申请认证！</string>

</resources>
